--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,9 +1,11 @@
 .container {
     margin: 5px 5px;
+    display: block;
+    margin-bottom: 3%;
 }
 
 .input-field {
     width: 100%;
-    height: 30px;
-    padding: 5%;
+    padding: 3%;
+    border: 1px solid grey;
 }
