--- a/src/pages/add-employee/add-employee.css
+++ b/src/pages/add-employee/add-employee.css
@@ -1,13 +1,16 @@
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .form {
-    width: 50%;
+    width: 400px;
+    margin: 1% auto
 }
 
 .btn-wrapper {
-    float: right;
+    width: 100%;
+    margin-left: 60%;
     margin-top: 5%;
 }
